--- a/multi_layer_model/multi_layer_model.ipynb
+++ b/multi_layer_model/multi_layer_model.ipynb
@@ -291,16 +291,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "8f5c7d43",
-   "metadata": {},
-   "source": [
-    "## Neural Net"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "6ab0e26a",
    "metadata": {},
    "outputs": [
@@ -361,89 +353,39 @@
        "      <td>0</td>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7483</th>\n",
-       "      <td>NCGC00016580-01</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7484</th>\n",
-       "      <td>NCGC00017043-02</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7485</th>\n",
-       "      <td>NCGC00160377-01</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7486</th>\n",
-       "      <td>NCGC00255635-01</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7487</th>\n",
-       "      <td>NCGC00260238-01</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>7488 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   ID  Active  \\\n",
-       "0     NCGC00254542-01       0   \n",
-       "1     NCGC00093759-01       0   \n",
-       "2     NCGC00183843-01       0   \n",
-       "3     NCGC00258736-01       0   \n",
-       "4     NCGC00256003-01       0   \n",
-       "...               ...     ...   \n",
-       "7483  NCGC00016580-01       0   \n",
-       "7484  NCGC00017043-02       0   \n",
-       "7485  NCGC00160377-01       0   \n",
-       "7486  NCGC00255635-01       0   \n",
-       "7487  NCGC00260238-01       0   \n",
-       "\n",
-       "                                            fingerprint  \n",
-       "0     [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "1     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "2     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "3     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "4     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "...                                                 ...  \n",
-       "7483  [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "7484  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "7485  [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "7486  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "7487  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "\n",
-       "[7488 rows x 3 columns]"
+       "                ID  Active                                        fingerprint\n",
+       "0  NCGC00254542-01       0  [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...\n",
+       "1  NCGC00093759-01       0  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...\n",
+       "2  NCGC00183843-01       0  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...\n",
+       "3  NCGC00258736-01       0  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...\n",
+       "4  NCGC00256003-01       0  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ..."
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_train"
+    "df_train.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f5c7d43",
+   "metadata": {},
+   "source": [
+    "## Neural Net"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "bf9dda04",
    "metadata": {},
    "outputs": [
@@ -496,7 +438,6 @@
     "cutoff = 0.5\n",
     "\n",
     "# Initialize leanring rate and warm-up\n",
-    "learning_rate = 0.01\n",
     "max_learning_rate = 0.5\n",
     "warmup_epochs = 10\n",
     "\n",
@@ -511,7 +452,6 @@
     "min_loss = 100\n",
     "\n",
     "all_losses = []\n",
-    "biases = []\n",
     "all_losses_val = []\n",
     "\n",
     "for i in tqdm(range(num_epochs)):\n",
@@ -576,11 +516,11 @@
     "        [dL_dweights_1, dL_dbias_1, dL_dweights_2, dL_dbias_2], max_norm=5.0\n",
     "    )\n",
     "\n",
-    "    biases.append(np.mean(bias_1))\n",
-    "\n",
-    "    # Learning rate warm-ups\n",
+    "    # Learning rate warm-up\n",
     "    if i < warmup_epochs:\n",
     "        learning_rate = max_learning_rate * (i+1) / warmup_epochs\n",
+    "    else:\n",
+    "        learning_rate = max_learning_rate\n",
     "\n",
     "    # Update weights\n",
     "    weights_2 -= learning_rate * dL_dweights_2\n",
@@ -598,7 +538,7 @@
     "\n",
     "sns.lineplot(data=all_losses_val, ax=axs[1])\n",
     "axs[1].set_title('Validation Loss')\n",
-    "axs[1].axvline(x=best_epoch, color='red', linestyle='--', label=f'Best Epoch {best_epoch}')\n",
+    "axs[1].axvline(x=best_epoch, color='red', linestyle='--', label=f'Best Epoch: {best_epoch}')\n",
     "axs[1].legend()\n",
     "\n",
     "\n",
